@@ -1,1 +1,1 @@
-DIST v1.0.0.tar.gz 151012 SHA256 33c4455a2b2d176ffe9a96e4d719fd6b84d02c3655feeb3fae2e75579b8c5de5 SHA512 3dce307c207628206ac8dfea91fbfc16e6ad7ac4274c7af14baa6d9f0dd16f60b9d87e382e32f620cf871ff979bb201a0e280404086fdb3f5afb269e39f968ec WHIRLPOOL 9d381cbda2a1049587b4d2505dbd9ec472e11e2dc35fef7e2866e9d563b4aa8f08c9dc21ab97ea6a76a509e090b105bed7dc6c829dd73879df4cb9354b004c40
+DIST mailnag-1.1.0.tar.gz 157779 SHA256 3924c5318e0a91705a1ed5bb54df69197fd5b8b04ffb651eb6e3af2afb9e2452 SHA512 f1578f85c2400ced8c182a70f583c2d1fbad832a7710f62a3ebca1e1e07541b02607bfa7e87295a69c5b213c80b0d96fd41bcc40ced8744c7323c38a722978c0 WHIRLPOOL 0d2eec84bd5ba70f6545a7e655c050825e8a8e9e6cc49b093053babeb5d29c88cb9b4d40fb48d83355f5aa3b9f048ed3d2cbb1c2fb81d0558a6a7035dec03584
